--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,11 @@
             android:padding="20dp"
             android:src="@drawable/logo_small" />
 
-        <EditText
+        <TextView
             android:id="@+id/search_bar_edit"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@null"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:hint="소속 또는 이름을 입력하세요" />
 
     </LinearLayout>
@@ -52,6 +51,7 @@
         android:layout_marginBottom="@dimen/between_icon_margin"
         android:backgroundTint="@color/milkWhite"
         android:src="@drawable/btn_mylocation"
+        app:borderWidth="0dp"
         app:fabCustomSize="@dimen/fab_size"
         app:maxImageSize="@dimen/fab_icon_size" />
 
@@ -64,32 +64,35 @@
         android:layout_marginBottom="@dimen/between_icon_margin"
         android:backgroundTint="@color/colorCall"
         android:src="@drawable/btn_call_map"
+        app:borderWidth="0dp"
         app:fabCustomSize="@dimen/fab_size"
         app:maxImageSize="@dimen/fab_icon_size" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_filter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="@dimen/margin_from_parents"
         android:layout_marginBottom="@dimen/margin_from_parents"
         android:backgroundTint="@color/colorFilter"
         android:src="@drawable/btn_filter"
+        app:borderWidth="0dp"
         app:fabCustomSize="@dimen/fab_size"
         app:maxImageSize="@dimen/fab_icon_size" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_conv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignBottom="@+id/btn_filter"
         android:layout_marginRight="@dimen/between_icon_margin"
         android:layout_toLeftOf="@+id/btn_filter"
         android:backgroundTint="@color/milkWhite"
         android:src="@drawable/btn_filter_conveniencestore"
         android:visibility="invisible"
+        app:borderWidth="0dp"
         app:fabCustomSize="@dimen/fab_size"
         app:maxImageSize="@dimen/fab_text_size_three" />
 
@@ -103,6 +106,7 @@
         android:backgroundTint="@color/milkWhite"
         android:src="@drawable/btn_filter_restaurant"
         android:visibility="invisible"
+        app:borderWidth="0dp"
         app:fabCustomSize="@dimen/fab_size"
         app:maxImageSize="@dimen/fab_icon_size" />
 
@@ -116,6 +120,7 @@
         android:backgroundTint="@color/milkWhite"
         android:src="@drawable/btn_filter_cafe"
         android:visibility="invisible"
+        app:borderWidth="0dp"
         app:fabCustomSize="@dimen/fab_size"
         app:maxImageSize="@dimen/fab_icon_size" />
 
@@ -129,6 +134,7 @@
         android:backgroundTint="@color/milkWhite"
         android:src="@drawable/btn_filter_retiringroom"
         android:visibility="invisible"
+        app:borderWidth="0dp"
         app:fabCustomSize="@dimen/fab_size"
         app:maxImageSize="@dimen/fab_text_size_three" />
 
